--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <a title="LinkedIn Account" target="_blank" href="https://www.linkedin.com/in/rrezartakrasniqi">
         <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: 10px; width: 28px; height: 28px;"/></a>
 
-        <a href="https://twitter.com/RrezartaKrasni2" target="_blank" title="Twitter Account">
+        <a href="https://twitter.com/Rr_Krasniqi" target="_blank" title="Twitter Account">
         <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 9px; width: 28px; height: 28.5px;"/></a></p>
 	
       </div>
