--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
       Meanwhile, I actively engage in projects centered around code summarization techniques that aim to provide a holistic understanding of functional aspects of software systems.</p>
 		
-      <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a software developer for over three years, contributing to the development of various web-based Java applications. Additionally, I used advanced Oracle technologies to create complex SQL reports for a large enterprise resource planning project.</p>
+      <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a senior Java developer for over three years, contributing to the development of various web-based Java applications. Additionally, I used advanced Oracle technologies to create complex SQL reports for a large enterprise resource planning project.</p>
       
       <p>I hold a B.S. degree in Computer Science and Mathematics from the University of Prishtina (Kosovo) and an M.S. degree in Computer Science and Engineering from the University of Notre Dame.</p>
     </div>
@@ -75,19 +75,19 @@
         <a href="https://dblp.org/pid/208/6990.html" target="_blank" title="DBLP Account">
         <img alt="DBLP" src="images/dblp_logo.png" style=" margin-left: -1px; width: 38px; height: 32px;"/></a>
 
-        <a title="SemanticScholar Account" target="_blank" href="https://www.semanticscholar.org/author/Rrezarta-Krasniqi/29449864">
+        <a title="SemanticScholar Account" target="_blank" href="https://www.semanticscholar.org/author/rrezarta-krasniqi/29449864">
         <img alt="SemanticScholar" src="images/sem_logo.png" style="margin-left: -2px; width: 32px; height: 30px;"/></a> 
 
        <a title="ORCiD ID Account" target="_blank" href="https://orcid.org/0000-0001-6884-6131">
         <img alt="ORCiD ID" src="images/id_logo.png" style="margin-left: 2px; width: 28px; height: 28px;"/></a>
 
-        <a title="ResearchGate Account" target="_blank" href="https://www.researchgate.net/profile/Rrezarta_Krasniqi">
+        <a title="ResearchGate Account" target="_blank" href="https://www.researchgate.net/profile/rrezarta_krasniqi">
         <img alt="ResearchGate" src="images/researchgate_logo.png" style="margin-left: 9px; width: 28px;  height: 27.5px;" /></a>
 
         <a title="LinkedIn Account" target="_blank" href="https://www.linkedin.com/in/rrezartakrasniqi">
         <img alt="LinkedIn" src="images/linkedin_logo.png" style="margin-left: 10px; width: 28px; height: 28px;"/></a>
 
-        <a href="https://twitter.com/Rr_Krasniqi" target="_blank" title="Twitter Account">
+        <a href="https://twitter.com/rr_krasniqi" target="_blank" title="Twitter Account">
         <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 9px; width: 28px; height: 28.5px;"/></a></p>
 	
       </div>
