--- a/awards/awards.html
+++ b/awards/awards.html
@@ -70,10 +70,10 @@
       <strong><font color="92150F">Honors and Awards</font></strong><br><br>
 		
       <ul>
+        <li><em>Best Poster Award</em> (3rd place), CMD-IT/ACM Richard Tapia Conference (2023)</li>
+		<li><em>NCWIT Collegiate Award</em> (finalist) (2023)</li>
         <li><em>Tuition Benefit Program Award</em>, University of North Texas (2021-2023)</li>
         <li><em>College of Engineering Department Award</em>, University of North Texas (2021-2023)</li>
-        <!--<li><em>EECS Rising Stars</em>, Hosted by Georgia Institute of Technology (2023)</li>-->
-        <li><em>NCWIT Collegiate Award</em> (finalist) (2023)</li>
         <li><em>Graduate Student Success Award</em>, University of North Texas (2022)</li>
         <li><em>Invitation to EMSE Journal</em>, SANER'21 Special Issue for Top Papers (2021)</li>
         <li><em>GHC-Virtual</em>, UNT Department of Computer Science and Engineering (2021)</li>
