--- a/awards/awards.html
+++ b/awards/awards.html
@@ -70,7 +70,7 @@
       <strong><font color="92150F">Honors and Awards</font></strong><br><br>
 		
       <ul>
-        <li><em>Best Poster Award</em> (3rd place), CMD-IT/ACM Richard Tapia Conference (2023)</li>
+        <li><em>Best Poster Award</em>, CMD-IT/ACM Richard Tapia Conference (2023)</li>
 		<li><em>NCWIT Collegiate Award</em> (finalist) (2023)</li>
         <li><em>Tuition Benefit Program Award</em>, University of North Texas (2021-2023)</li>
         <li><em>College of Engineering Department Award</em>, University of North Texas (2021-2023)</li>
