--- a/talks/talks.html
+++ b/talks/talks.html
@@ -57,6 +57,17 @@
 		
       <br>
       <br>
+
+      <p class="border">"Contextual Relationships of Buggy Classes for Detecting Quality-Related Bugs"</p>
+      &nbsp; &#9657; Presented at the 39<sup>th</sup> IEEE International Conference on Software Maintenance and Evolution (<a target="_blank" title="ICSME'23" href="https://conf.researchr.org/home/icsme-2023">ICSME'23</a>), October 4<sup>th</sup>, Bogota, Colombia 2023<br>
+      &nbsp; &#9657; <a target="_blank" title="Talk-ICSME'23" href="https://drive.google.com/file/d/1BWY-Uhsor0LEzGmXpMy6b7rWKA0OmyJh/view?usp=sharing">[Presentation Slides]</a>
+    
+      <center>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/C-q7LA6OAyk?si=rTGszJ4cdEHmu81u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </center>
+
+      <br>
+      <br>
 		
       <p class="border">"Generalizability of NLP-based Models for Modern Software Development Cross-Domain Environments"</p>
       &nbsp; &#9657; Presented at 2<sup>nd</sup> International Workshop on Natural Language-based Software Engineering (<a target="_blank" title="Talk-NLBSE'23" href="https://nlbse2023.github.io/program/">NLBSE'23</a>), May 20<sup>th</sup>, Melbourne, Australia, 2023<br>
