--- a/talks/talks.html
+++ b/talks/talks.html
@@ -59,7 +59,7 @@
       <br>
 
       <p class="border">"Contextual Relationships of Buggy Classes for Detecting Quality-Related Bugs"</p>
-      &nbsp; &#9657; Presented at the 39<sup>th</sup> IEEE International Conference on Software Maintenance and Evolution (<a target="_blank" title="ICSME'23" href="https://conf.researchr.org/home/icsme-2023">ICSME'23</a>), October 4<sup>th</sup>, Bogota, Colombia 2023<br>
+      &nbsp; &#9657; Presented at the 39<sup>th</sup> IEEE International Conference on Software Maintenance and Evolution (<a target="_blank" title="ICSME'23" href="https://conf.researchr.org/home/icsme-2023">ICSME'23</a>), October 4<sup>th</sup>, Bogota, Colombia, 2023<br>
       &nbsp; &#9657; <a target="_blank" title="Talk-ICSME'23" href="https://drive.google.com/file/d/1BWY-Uhsor0LEzGmXpMy6b7rWKA0OmyJh/view?usp=sharing">[Presentation Slides]</a>
     
       <center>
