--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		
       <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a senior Java developer for over three years, contributing to the development of various web-based applications. Additionally, I used advanced Oracle technologies to create complex SQL reports for a large enterprise resource planning project.</p>
       
-      <p>I hold a B.S. degree in Computer Science and Mathematics from the University of Prishtina (Kosovo) and an M.S. degree in Computer Science and Engineering from the University of Notre Dame.</p>
+      <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina (Kosovo), an M.S. degree in Computer Science from Midwestern State University, and an M.S. degree in Computer Science and Engineering from the University of Notre Dame.</p>
     </div>
 
     <div class="sidebar">
