--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -45,17 +45,18 @@
   <div class="page item_shrink">
     <div class="content2">
 		
-      <h3>Teaching</h3><br>
+    <h3>Teaching</h3><br>
 
 	  <strong>Past Courses @ University of North Texas</strong><br><br>
-      <strong><font color="92150F">Teaching Fellow</font></strong><br><br>
+     
+    <strong><font color="92150F">Teaching Fellow</font></strong><br><br>
 		
       <ul>
         <li>
           <div class="dropdown">CSCE5933-Topics in Computer Science and Engineering, Spring 2023
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  Advanced study of languages, files and processing techniques
+				        Advanced study of languages, files and processing techniques
                 with applications selected from reservations systems,
                 inventory systems and other administrative applications,
                 process control (pc), computer instruction, information
@@ -99,10 +100,23 @@
 		
       <ul>
         <li>
+          <div class="dropdown">CSCE5320-Scientific Data Visualization, Spring 2024
+            <div class="dropdown-content">
+              <p class="border"><strong><i>Course Description.</i></strong> 
+              Introduction to visualization methods in data exploration. Topics 
+              include the use of space, form and color to communicate information; 
+              visualization of multi-dimensional data; data reduction methods such 
+              as principal component analysis and regression; methods for special 
+              domains such as geographic data and large graphs; and designing and 
+              implementing interactive interfaces.</p>
+            </div>
+          </div>
+        </li>
+        <li>
           <div class="dropdown">CSCE5430-Software Engineering, Fall 2021, Fall 2023<br>
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  This course is an introduction to software engineering.
+				        This course is an introduction to software engineering.
                 Students will gain the knowledge and skills required for the
                 disciplined development of large software projects. Students
                 in this course will participate in a large team project.The
@@ -117,7 +131,7 @@
           <div class="dropdown">CSCE5460-Software Testing and Empirical Methodologies, Spring 2022
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  This course addresses recent advances in the field of
+				        This course addresses recent advances in the field of
                 software testing, including empirical methodologies that
                 provide a systematic way to investigate various software
                 engineering techniques, methods and methodologies. Students
@@ -132,7 +146,7 @@
           <div class="dropdown">CSCE5200-Information Retrieval and Web Search, Summer 2022
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  This course covers traditional material and recent advances
+				        This course covers traditional material and recent advances
                 in information retrieval, study of indexing, processing and
                 querying textual data, basic retrieval models, algorithms
                 and information retrieval system implementations.
@@ -146,7 +160,7 @@
           <div class="dropdown">CSCE4901-Software Development Capstone I, Spring 2021
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  In this course students demonstrate their mastery of the
+				        In this course students demonstrate their mastery of the
                 breadth of computer science learned in their studies. Focus
                 is on the application of computer science techniques to the
                 design of applications involving multiple software
@@ -163,7 +177,7 @@
           <div class="dropdown">CSCE3444-Software Engineering, Summer 2021
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  The course is intended to teach students how to refine user
+				        The course is intended to teach students how to refine user
                 functional requirements, non-functional requirements and
                 constraints for a large-scale software system. Be able to
                 perform software analysis and design tasks using recognized
@@ -183,7 +197,7 @@
           <div class="dropdown">CSE40793-Software Development Practices, Fall 2020
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  Principles, techniques, practices, and tools for modeling,
+				        Principles, techniques, practices, and tools for modeling,
                 designing, implementing, and testing medium to large-scale
                 software systems. Topics covered include design patterns,
                 architectural styles and tactics for improving performance,
@@ -197,7 +211,7 @@
           <div class="dropdown">CSE40793-Principles and Practices of Software Development, Fall 2019
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  Principles, techniques, practices, and tools for modeling,
+				        Principles, techniques, practices, and tools for modeling,
                 designing, implementing, and testing medium to large-scale
                 software systems. Topics covered include design patterns,
                 architectural styles and tactics for improving performance,
@@ -218,7 +232,7 @@
           <div class="dropdown">CS3383-Theory of Automata, Summer 2016
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  This course addresses the relationship between language,
+				        This course addresses the relationship between language,
                 grammars, and automata. Deterministic (DFA) and nondeterministic 
                 machines (NFA), regular expressions (RE). Pushdown automata (PDA) 
                 and Turing Machines. Limits of computability.</p>
@@ -229,7 +243,7 @@
           <div class="dropdown">CS3361-Concepts of Programming Languages, Spring 2016
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  This course addresses concepts related to programming
+				        This course addresses concepts related to programming
                 language design. The investigation and comparison of
                 different programming language paradigms.</p>
             </div>
@@ -239,7 +253,7 @@
           <div class="dropdown">CS4352-Operating Systems, Spring 2016
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  This course addresses core software components of a computer
+				        This course addresses core software components of a computer
                 system and manages various resources of a computer, such as
                 processors, main memory, disks, displays, network
                 interfaces, scheduling and resource management, file
@@ -251,7 +265,7 @@
           <div class="dropdown">CS2413-Data Structures (C Programming), Spring 2016
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  This course addresses the interaction of data and procedural
+				        This course addresses the interaction of data and procedural
                 abstractions. Data structures: lists, stacks, queues, trees.
                 Algorithms such as searching, sorting, hashing, and graph
                 traversals. Students are assumed to have a proficiency with
@@ -266,7 +280,7 @@
           <div class="dropdown">CS2314-Data Structures (C++ Programming), Fall 2015
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  This course addresses the interaction of data and procedural
+				        This course addresses the interaction of data and procedural
                 abstractions. Data structures: lists, stacks, queues, trees.
                 Algorithms such as searching, sorting, hashing, and graph
                 traversals. Students will solve problems using and implement
@@ -284,7 +298,7 @@
           <div class="dropdown">GR18FZ-GRE and GMAT Preparatory Exam, Summer 2015
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				  The Graduate Record Examinations (GRE) is a standardized
+				        The Graduate Record Examinations (GRE) is a standardized
                 test that is an admissions requirement for most graduate
                 schools in the US. The exam aims to measure verbal
                 reasoning, quantitative reasoning, analytical writing, and
@@ -299,7 +313,7 @@
           <div class="dropdown">RM28FZ-Remedial Math, Summer 2015
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				This course enables students to develop mathematical skills
+				        This course enables students to develop mathematical skills
                 and concepts through remedial instruction and practice. The
                 content should include, but not be limited to, the
                 following: math content that has been identified by
@@ -317,7 +331,7 @@
           <div class="dropdown">DS18FZ-Discovery, Summer 2015
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				The course is designed to introduce candidates to the US
+				        The course is designed to introduce candidates to the US
                 higher education system, the American culture, diversity,
                 and general communication discourse. It tackles the
                 importance of culture in our everyday lives and the ways in
@@ -337,7 +351,7 @@
           <div class="dropdown">MATH1634-Calculus I, Fall 2008
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				Differentiation of functions of one variable with
+				        Differentiation of functions of one variable with
                 applications, integration including simple substitution and
                 numerical evaluation, and applications of integration.</p>
             </div>
@@ -347,7 +361,7 @@
           <div class="dropdown">MATH2534-Calculus III, Spring 2008
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				Space geometry and vectors, vector-valued functions, partial
+				        Space geometry and vectors, vector-valued functions, partial
                 differentiation and multiple integration with applications.
                 Each student must have a graphing calculator.</p>
             </div>
@@ -357,7 +371,7 @@
           <div class="dropdown">MATH3433-Differential Equations, Spring 2008
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				Introduction to the theory of and applications of ordinary
+				        Introduction to the theory of and applications of ordinary
                 differential equations; solution techniques for linear and
                 separable equations; numerical approximation of solutions;
                 introduction to phase plane analysis and non-linear
@@ -369,7 +383,7 @@
           <div class="dropdown">CMPS1033-Computing for Science Majors, Spring 2007
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				Selected topics from introductory areas of computer science.
+				        Selected topics from introductory areas of computer science.
                 Topics are selected to meet the needs of non-computer
                 science majors to satisfy the general degree requirements
                 for computer literacy.</p>
@@ -380,7 +394,7 @@
           <div class="dropdown">CMPS1013-Computer Concepts and Applications, Spring 2007
             <div class="dropdown-content">
               <p class="border"><strong><i>Course Description.</i></strong> 
-				An introduction to common software applications and computer
+				        An introduction to common software applications and computer
                 terminology across a wide variety of disciplines, building a
                 framework for computer use in a technological world.
                 Emphasis is placed on lifelong learning and application of
