--- a/service/service.html
+++ b/service/service.html
@@ -49,7 +49,7 @@
       <strong><font color="92150F">Invited Journal Reviewer</font></strong><br><br>
 		
       <ul>
-        <li><em>Reviewer</em>, Software Quality Journal (SQJO'23)</li>
+        <li><em>Reviewer</em>, Software Quality Journal (SQJ'23)</li>
         <li><em>Reviewer</em>, Journal for Software: Evolution and Process (JSEP'23)</li>
         <li><em>Reviewer</em>, Journal for Software: Testing Verification and Reliability (JSTVR'22)</li>
       </ul>
