--- a/research/current_past_projects.html
+++ b/research/current_past_projects.html
@@ -66,7 +66,7 @@
         <li>How effectively can generated code summaries help developers holistically understand scattered quality concerns across  codebase &amp; evolving     software artifacts? 
 			[<a href="past_projects/retro_rank_tool.html" target="_self">APR'21</a>,  
 			 <a href="past_projects/retro_rank_tool.html" target="_self">COMPSAC'21</a>, 
-			 <a href="current_projects/soft_qual_topic_detector_tool.html" target="_self">SQJO'23</a>]  
+			 <a href="current_projects/soft_qual_topic_detector_tool.html" target="_self">SQJ'23</a>]  
 		</li>
 		  
         <li>To what extent can we detect and disentangle quality-related changes from unrelated ones to address issues related to debugging, refactoring, and code enhancement? <!--[ICSME'24]--></li>
