--- a/research/past_projects/enhancing_refactoring_explanations_project.html
+++ b/research/past_projects/enhancing_refactoring_explanations_project.html
@@ -73,10 +73,11 @@
         improve the underlying management of tracking systems and
         stakeholder requirements in open-source communities.<br></p>
       <p class="border"><strong><i>
-    <img src="../project_images/architecture_refactoring_commit.png" style="border: 0px solid white; width: 421px; height: 204px; margin-left: 140px;"/></div></i></strong></p>
+    <img src="../project_images/architecture_refactoring_commit.png" style="border: 0px solid white; width: 421px; height: 204px; margin-left: 140px;"/></i></strong></p></div>
 
     <div class="sidebar">
-      <div class="title"><h4 align="center"> Current Research Projects</h4></div>
+      <div class="title"><h4 align="center">Current Research Projects</h4>
+    </div>
 		
       <ul>
         
