--- a/service/service.html
+++ b/service/service.html
@@ -57,13 +57,13 @@
       <strong><font color="92150F">Invited Program Committee</font></strong><br><br>
 		
       <ul>
-        <li><em>PC Member</em>, International Conference on Software Engineering (ICSE'24)</li>
-        <li><em>PC Member</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'24)</li>
-        <li><em>PC Member</em>, International Joint Conference (ISSTA'24/ECOOP'24)</li>
-        <li><em>PC Member</em>, International Conference on Software Engineering for Artificial Intelligence (CAIN'23, CAIN'24)</li>
-        <li><em>PC Member</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'23, EASE'24)</li> 
-        <li><em>PC Member</em>, International Conference on Mobile Software Engineering and Systems (MOBILESoft'22, MOBILESoft'23)</li>
-        <li><em>PC Member</em>, International Conference on Mining Software Repositories (MSR'22, MSR'23)</li>
+        <li><em>PC Member (Artifact Evaluation Track)</em>, International Conference on Software Engineering (ICSE'24)</li>
+        <li><em>PC Member (Research Track)</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'24)</li>
+        <li><em>PC Member (Tool Demonstration Track)</em>, International Joint Conference (ISSTA'24/ECOOP'24)</li>
+        <li><em>PC Member (Research and Experience Track)</em>, International Conference on Software Engineering for Artificial Intelligence (CAIN'23, CAIN'24)</li>
+        <li><em>PC Member (Research Track)</em>, International Conference on Evaluation and Assessment in Software Engineering (EASE'23, EASE'24)</li> 
+        <li><em>PC Member (Research Track)</em>, International Conference on Mobile Software Engineering and Systems (MOBILESoft'22, MOBILESoft'23)</li>
+        <li><em>PC Member (Junior PC Track)</em>, International Conference on Mining Software Repositories (MSR'22, MSR'23)</li>
       </ul>
 		
       <strong><font color="92150F">Invited Organizing Committee</font></strong><br><br>
