--- a/service/service.html
+++ b/service/service.html
@@ -50,7 +50,7 @@
 		
       <ul>
         <li><em>Reviewer</em>, Software Quality Journal (SQJ'23)</li>
-        <li><em>Reviewer</em>, Journal for Software: Evolution and Process (JSEP'23)</li>
+        <li><em>Reviewer</em>, Journal for Software: Evolution and Process (JSEP'23-JSEP'24)</li>
         <li><em>Reviewer</em>, Journal for Software: Testing Verification and Reliability (JSTVR'22)</li>
       </ul>
 		
