--- a/service/service.html
+++ b/service/service.html
@@ -49,9 +49,9 @@
       <strong><font color="92150F">Invited Journal Reviewer</font></strong><br><br>
 		
       <ul>
-        <li><em>Reviewer</em>, Software Quality Journal (SQJ'23)</li>
-        <li><em>Reviewer</em>, Journal for Software: Evolution and Process (JSEP'23-JSEP'24)</li>
-        <li><em>Reviewer</em>, Journal for Software: Testing Verification and Reliability (JSTVR'22)</li>
+        <li><em>Reviewer</em>, Software Quality Journal</li>
+        <li><em>Reviewer</em>, Journal for Software: Evolution and Process</li>
+        <li><em>Reviewer</em>, Journal for Software: Testing Verification and Reliability</li>
       </ul>
 		
       <strong><font color="92150F">Invited Program Committee</font></strong><br><br>
