--- a/awards/awards.html
+++ b/awards/awards.html
@@ -11,7 +11,7 @@
 <div id="wrap">
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
-            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi</a></h1>
+            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
     <h3 style="margin-left: -0px;">Department of Computer Science and Engineering</h3>
     <h3 style="margin-left: -0px;">University of North Texas</h3>
   </div>
@@ -50,7 +50,7 @@
       <strong><font color="92150F">Research Grants</font></strong><br><br>
 		
       <ul>
-        <li><em>Doctoral Research Support Grant</em>, The Toulouse Graduate School, University of North Texas (2023</li>
+        <li><em>Doctoral Research Support Grant</em>, The Toulouse Graduate School, University of North Texas (2023)</li>
         <li><em>Women in STEM Grant</em>, Women and Hi Tech (2019)</li>
       </ul>
 		
