--- a/publications/all_publications.html
+++ b/publications/all_publications.html
@@ -11,7 +11,7 @@
 <div id="wrap">
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
-            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi</a></h1>
+            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
     <h3 style="margin-left: -0px;">Department of Computer Science and Engineering</h3>
     <h3 style="margin-left: -0px;">University of North Texas</h3>
   </div>
@@ -51,11 +51,11 @@
       <div style="display: flex; background-color:white;">	  
         <iframe id="frame1" 
 				name="frame1" 
-				target="_blank" 
+				target="_top"
 				width="1180" 
 				height="450" 
 				frameBorder="0" 
-				sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-same-origin allow-popups-to-escape-sandbox allow-top-navigation allow-top-navigation-by-user-activation" 
+				sandbox="allow-scripts allow-popups allow-forms allow-same-origin allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation" 
 				src="https://bibbase.org/show?bib=https%3A%2F%2Fapi.zotero.org%2Fusers%2F10198036%2Fcollections%2F2RHJXKSI%2Fitems%3Fkey%3DX0RoN8iO9RtTbrWfSkRasb7b%26format%3Dbibtex%26limit%3D100">
 		  </iframe>
       </div>		
