--- a/talks/talks.html
+++ b/talks/talks.html
@@ -11,7 +11,7 @@
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
             href="mailto:RrezartaKrasniqi@my.unt.edu"
-            style="text-decoration:none;">Rrezarta Krasniqi</a></h1>
+            style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
     <h3 style="margin-left: -0px;">Department of Computer Science and Engineering</h3>
     <h3 style="margin-left: -0px;">University of North Texas</h3>
   </div>
