--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="wrap">
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
-            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi</a></h1>
+            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
     <h3 style="margin-left: 0px; width: 1096px;">Department of Computer Science and Engineering</h3>
     <h3 style="margin-left: -0px;">University of North Texas</h3>
   </div>
@@ -47,7 +47,7 @@
 		
       <h3>Home</h3><br>
 		
-      <p>I am a Ph.D candidate in the <a href="https://computerscience.engineering.unt.edu/" target="_blank">Department of Computer Science and Engineering</a> at the <a target="_blank" href="https://www.unt.edu/"> <u>University of North Texas</u></a>, advised by <a target="_blank" title="Advisor" href="http://www.cse.unt.edu/%7Ehdo/">Prof. Hyunsook Do</a>. My research interests lie in the area of requirements engineering with an emphasize on software maintenance and evolution.</p>
+      <p>I have recently passed the dissertation,&nbsp;  in Computer Science and Engineering in the <a href="https://computerscience.engineering.unt.edu/" target="_blank">Department of Computer Science and Engineering</a> at the <a target="_blank" href="https://www.unt.edu/"> <u>University of North Texas</u></a>, advised by <a target="_blank" title="Advisor" href="http://www.cse.unt.edu/%7Ehdo/">Prof. Hyunsook Do</a>. My research interests lie in the area of requirements engineering with an emphasize on software maintenance and evolution.</p>
 		
       <p>In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools to enhance and contextualize the understanding of complex quality issues that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality. <!--You can learn more by reading my dissertation or watching my dissertation talk.--> 
         
@@ -55,7 +55,7 @@
 		
       <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a senior Java developer for over three years, contributing to the development of various web-based applications. <!--Additionally, I used advanced Oracle technologies to create complex SQL reports for a large enterprise resource planning project.--></p>
       
-      <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina (Kosovo), an M.S. degree in Computer Science from Midwestern State University, and an M.S. degree in Computer Science and Engineering from the University of Notre Dame.</p>
+      <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina (Kosovo), an M.S. degree in Computer Science from Midwestern State University,   M.S. degree in Computer Science and Engineering from the University of Notre Dame.</p>
     </div>
 
     <div class="sidebar">
@@ -63,7 +63,7 @@
       <div class="title"><h4 align="center">Contact Information</h4></div>
 
         <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
-			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 190px; height: 210px;"/></a></p>
+			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 200px; height: 200px;"/></a></p>
         <p class="blocktext">Research Assistant and Teaching Fellow</p>
         <p class="blocktext"><strong>E-mail</strong>: Rrezarta.Krasniqi@unt.edu<br>
         <strong>Office</strong>: Discovery Park, F288</p>
