--- a/research/current_projects/soft_qual_detector_tool.html
+++ b/research/current_projects/soft_qual_detector_tool.html
@@ -43,7 +43,7 @@
   </div>
   <div class="page">
     <div class="content">
-      <h3> Hierarchical &amp; Context-Aware Detection of Quality Concerns in Sup. of Bug Repair</h3>
+      <h3> Hierarchical &amp; Context-Aware Detection of Quality Concerns in Support of Bug Repair</h3>
       <br>
       <p class="border"><img align="left" border="0" alt="approach" src="../project_images/architectural_overview.png"
               style="border: 0px solid white; width: 307px; height: 355px; margin-left: -3px; margin-top: -10px;"
