--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
   <div id="nav">
     <ul>
       <li class="selected"><a target="_top" title="home" href="index.html" onmouseout="this.style.color='#92150F'"
-              onmouseover="this.style.color='#000'"><span>Home</span></a></li>
+      onmouseover="this.style.color='#000'"><span>Home</span></a></li>
 		
       <li class="selected"><a target="_top" title="research" href="research/current_past_projects.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
+      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Research</span></a></li>
 		
       <li class="selected"><a target="_top" title="publications" href="publications/all_publications.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
+      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Publications</span></a></li>
 		
       <li class="selected"><a target="_top" title="teaching" href="teaching/teaching.html"
               onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Teaching</span></a></li>
 		
       <li class="selected"><a target="_top" title="awards" href="awards/awards.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
+      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Awards</span></a></li>
 		
       <li class="selected"><a target="_top" title="service" href="service/service.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
+      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Service</span></a></li>
 		
       <li class="selected"><a target="_top" title="talks" href="talks/talks.html"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
+      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>Talks</span></a></li>
 		
       <li class="selected"><a target="_blank" title="Rrezarta Krasniqi-CV" href="cv/krasniqi_cv.pdf"
-              onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>CV</span></a></li>
+      onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>CV</span></a></li>
     </ul>
   </div>
   <div class="page">
@@ -49,8 +49,9 @@
 		
       <p>I have recently passed the dissertation,&nbsp;  in Computer Science and Engineering in the <a href="https://computerscience.engineering.unt.edu/" target="_blank">Department of Computer Science and Engineering</a> at the <a target="_blank" href="https://www.unt.edu/"> <u>University of North Texas</u></a>, advised by <a target="_blank" title="Advisor" href="http://www.cse.unt.edu/%7Ehdo/">Prof. Hyunsook Do</a>. My research interests lie in the area of requirements engineering with an emphasize on software maintenance and evolution.</p>
 		
-      <p>In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools to enhance and contextualize the understanding of complex quality issues that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality. <!--You can learn more by reading my dissertation or watching my dissertation talk.--> 
-        
+      <p>In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality.
+         <!--You can learn more by reading my dissertation.-->
+
       Meanwhile, I actively engage in projects centered around code summarization techniques that aim to provide a holistic understanding of functional aspects of software systems.</p>
 		
       <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a senior Java developer for over three years, contributing to the development of various web-based applications. <!--Additionally, I used advanced Oracle technologies to create complex SQL reports for a large enterprise resource planning project.--></p>
