--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		
       <h3>Home</h3><br>
 		
-      <p>I have recently passed the dissertation,&nbsp;  in Computer Science and Engineering in the <a href="https://computerscience.engineering.unt.edu/" target="_blank">Department of Computer Science and Engineering</a> at the <a target="_blank" href="https://www.unt.edu/"> <u>University of North Texas</u></a>, advised by <a target="_blank" title="Advisor" href="http://www.cse.unt.edu/%7Ehdo/">Prof. Hyunsook Do</a>. My research interests lie in the area of requirements engineering with an emphasize on software maintenance and evolution.</p>
+      <p>I have earned a Ph.D. in Computer Science and Engineering in the <a href="https://computerscience.engineering.unt.edu/" target="_blank">Department of Computer Science and Engineering</a> at the <a target="_blank" href="https://www.unt.edu/"> <u>University of North Texas</u></a>, advised by <a target="_blank" title="Advisor" href="http://www.cse.unt.edu/%7Ehdo/">Prof. Hyunsook Do</a>. My research interests lie in the area of requirements engineering with an emphasize on software maintenance and evolution.</p>
 		
       <p>In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality.
          <!--You can learn more by reading my dissertation.-->
