--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		
       <h3>Home</h3><br>
 		
-      <p><b>I'm excited to share that starting in August 2024, I'll be joining the <a target="_blank" href="https://www.charlotte.edu/">University of North Carolina at Charlotte</a> as Assistant Professor in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems.</a></b>
+      <p><b>I'm excited to share that starting in August 2024, I'll be joining the <a target="_blank" href="https://www.charlotte.edu/">University of North Carolina at Charlotte</a> as an Assistant Professor in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems.</a></b>
 		
       <p>In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality.
          <!--You can learn more by reading my dissertation.-->
