--- a/publications/all_publications.html
+++ b/publications/all_publications.html
@@ -56,7 +56,7 @@
 				height="450" 
 				frameBorder="0" 
 				sandbox="allow-scripts allow-popups allow-forms allow-same-origin allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation" 
-				src="https://bibbase.org/show?bib=https%3A%2F%2Fapi.zotero.org%2Fusers%2F10198036%2Fcollections%2F2RHJXKSI%2Fitems%3Fkey%3DX0RoN8iO9RtTbrWfSkRasb7b%26format%3Dbibtex%26limit%3D100">
+				src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fzotero%2FRrezarta.Krasniqi">
 		  </iframe>
       </div>		
     </div>
