--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -9,10 +9,10 @@
 <body>
 <div id="wrap">
   <div class="header">
-    <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
-            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
-    <h3 style="margin-left: -0px;">Department of Computer Science and Engineering</h3>
-    <h3 style="margin-left: -0px;">University of North Texas</h3>
+    <h1 style="margin-left: -10px; width: 1200px;">
+      <a target="_blank" title="rrezarta_krasniqi_email" href="mailto:rrezarta.krasniqi@uncc.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
+    <h3 style="margin-left: -0px;">Department of Software and Information Systems</h3>
+    <h3 style="margin-left: -0px;">University of North Carolina at Charlotte</h3>
   </div>
 	
   <div style="width: 1161px;" id="nav">
@@ -47,8 +47,30 @@
 		
     <h3>Teaching</h3><br>
 
+    <strong>Current Courses @ University of North Carolina at Charlotte</strong><br><br>
+    <strong><font color="92150F">Instructor</font></strong><br><br>
+    
+      <ul>
+        <li>
+          <div class="dropdown"> ITIS3300-Software Requirements and Project Management, Fall 2024
+            <div class="dropdown-content">
+              <p class="border"><strong><i>Course Description.</i></strong> 
+                Introduction to requirement engineering and project management 
+                methodologies. Topics include: requirements elicitation, 
+                specification, and validation; structural, informational, 
+                behavioral, security, privacy, and computer user interface 
+                requirements; scenario analysis; application of object-oriented 
+                methodologies in requirements gathering; spiral development model; 
+                risk management models; software engineering maturity model; 
+                project planning and milestones; cost estimation; team 
+                organizations and behavior. Case studies will be used.</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+
+
 	  <strong>Past Courses @ University of North Texas</strong><br><br>
-     
     <strong><font color="92150F">Teaching Fellow</font></strong><br><br>
 		
       <ul>
@@ -224,7 +246,7 @@
       </ul>
 		
       <strong>Past Courses @ Texas Tech University</strong><br><br>
-      <strong><font color="92150F">Computer Science Instructor</font></strong><br>
+      <strong><font color="92150F">Instructor</font></strong><br>
 		
       <br>
       <ul>
@@ -291,7 +313,7 @@
       </ul>
 		
       <strong>Past Courses @ Rochester Institute of Technology (AUK)</strong><br><br>
-      <strong><font color="92150F">GRE and GMAT Instructor</font></strong><br><br>
+      <strong><font color="92150F">Instructor</font></strong><br><br>
 		
       <ul>
         <li>
