--- a/research/current_projects/bug_report_qual_classifier.html
+++ b/research/current_projects/bug_report_qual_classifier.html
@@ -10,9 +10,9 @@
 <div id="wrap">
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a style="text-decoration:none;"
-            href="mailto:Rrezarta.Krasniqi@unt.edu" title="rrezarta_krasniqi_email" target="_blank">Rrezarta Krasniqi, Ph.D.</a></h1>
-    <h3 style="margin-left: -0px;">Department of Computer Science and Engineering</h3>
-    <h3 style="margin-left: -0px;">University of North Texas</h3>
+            href="mailto:rrezarta.krasniqi@uncc.edu" title="rrezarta_krasniqi_email" target="_blank">Rrezarta Krasniqi, Ph.D.</a></h1>
+    <h3 style="margin-left: -0px;">Department of Software and Information Systems</h3>
+    <h3 style="margin-left: -0px;">University of North Carolina at Charlotte</h3>
   </div>
   <div id="nav">
     <ul>
