--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Rrezarta Krasniqi | Home</title>
-<link rel="stylesheet" href="styles.css" type="text/css" />
+<link rel="stylesheet" href="styles.css" type="text/css"/>
 <link rel="shortcut icon" href="images/r.k_icon.png" title="Rrezarta Krasniqi"/>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 
 <body>
 <div id="wrap">
   <div class="header">
     <h1 style="margin-left: -10px; width: 1200px;"><a target="_blank" title="rrezarta_krasniqi_email"
-            href="mailto:Rrezarta.Krasniqi@unt.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
-    <h3 style="margin-left: 0px; width: 1096px;">Department of Computer Science and Engineering</h3>
-    <h3 style="margin-left: -0px;">University of North Texas</h3>
+            href="mailto:rrezarta.krasniqi@uncc.edu" style="text-decoration:none;">Rrezarta Krasniqi, Ph.D.</a></h1>
+    <h3 style="margin-left: 0px; width: 1096px;">Department of Software and Information Systems</h3>
+    <h3 style="margin-left: -0px;">University of North Carolina at Charlotte</h3>
   </div>
+
   <div id="nav">
     <ul>
       <li class="selected"><a target="_top" title="home" href="index.html" onmouseout="this.style.color='#92150F'"
@@ -42,21 +43,23 @@
       onmouseout="this.style.color='#92150F'" onmouseover="this.style.color='#000'"><span>CV</span></a></li>
     </ul>
   </div>
+
   <div class="page">
     <div class="content">
 		
-      <h3>Home</h3><br>
+      <h3>Home</h3>
+      <br>
 		
-      <p><b>I'm excited to share that starting in August 2024, I'll be joining the <a target="_blank" href="https://www.charlotte.edu/">University of North Carolina at Charlotte</a> as an Assistant Professor in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems.</a></b>
-		
-      <p>In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality.
-         <!--You can learn more by reading my dissertation.-->
+      <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality. </p>
+
+       <p>You can learn more about my research by reading my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>. 
 
       Meanwhile, I actively engage in projects centered around code summarization techniques that aim to provide a holistic understanding of functional aspects of software systems.</p>
 		
-      <p>Prior to joining the Ph.D. program at the University of North Texas, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a senior Java developer for over three years, contributing to the development of various web-based applications. <!--Additionally, I used advanced Oracle technologies to create complex SQL reports for a large enterprise resource planning project.--></p>
+      <p>Prior to joining UNCC, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a senior Java developer for over three years, contributing to the development of various web-based applications.</p>
       
-      <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina (Kosovo), an M.S. degree in Computer Science from Midwestern State University,   M.S. degree in Computer Science and Engineering from the University of Notre Dame.</p>
+      <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina (Kosovo), an M.S. degree in Computer Science from Midwestern State University, M.S. degree in Computer Science and Engineering from the University of Notre Dame, and a Ph.D in Computer Science and Engineering from the University of North Texas.</p>
+   
     </div>
 
     <div class="sidebar">
@@ -65,9 +68,9 @@
 
         <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
 			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
-        <p class="blocktext">Research Assistant and Teaching Fellow</p>
-        <p class="blocktext"><strong>E-mail</strong>: Rrezarta.Krasniqi@unt.edu<br>
-        <strong>Office</strong>: Discovery Park, F288</p>
+        <p class="blocktext">Assistant Professor of Software Engineering</p>
+        <p class="blocktext"><strong>E-mail</strong>: rrezarta.krasniqi@uncc.edu<br>
+        <strong>Office</strong>: Woodward Hall</p>
      
       <p class="blocktext">
         <a title="GoogleScholar Account" target="_blank" href="https://scholar.google.com/citations?hl=en&user=r_Wi0GYAAAAJ&view_op=list_works&sortby=pubdate">
@@ -92,9 +95,11 @@
         <img alt="Twitter" src="images/twitter-logo.png" style="margin-left: 9px; width: 28px; height: 28.5px;"/></a></p>
 	
       </div>
+
      <div class="footer">
      <p>Copyright &copy; Rrezarta Krasniqi</p>
     </div>
+
    </div>
   </div>
 </body>
