--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
       <h3>Home</h3>
       <br>
 		
-      <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality. </p>
+      <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality. You can learn more about my research by reading my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>. 
 
-       <p>You can learn more about my research by reading my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>. 
-
-      Meanwhile, I actively engage in projects centered around code summarization techniques that aim to provide a holistic understanding of functional aspects of software systems.</p>
+      
 		
       <p>Prior to joining UNCC, I taught Computer Science at various institutions, covering undergraduate and graduate-level courses. I also worked as a senior Java developer for over three years, contributing to the development of various web-based applications.</p>
       
