--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h3>Home</h3>
       <br>
 		
-      <p>I am an Assistant Professor of Software Engineering in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality. You can learn more about my research by reading my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>. 
+      <p>I am an Assistant Professor in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex quality issues related to secuirty, usability, reliability among others that emerge as by-products of long-term maintenance efforts, while consistently seeking to promote effective methodologies and strategies for enhancing software quality. You can learn more about my research by reading my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>. 
 
       
 		
@@ -66,7 +66,7 @@
 
         <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
 			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
-        <p class="blocktext">Assistant Professor of Software Engineering</p>
+        <p class="blocktext">Assistant Professor</p>
         <p class="blocktext"><strong>E-mail</strong>: rrezarta.krasniqi@uncc.edu<br>
         <strong>Office</strong>: Woodward Hall</p>
      
