--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       
 		
-      <p>Prior to joining UNC Charlotte, I taught Computer Science courses at various high-level institutions, covering undergraduate and graduate courses. I also worked in industry as a senior Java developer for over three years, contributing to the development and maintenance of various web-based applications.</p>
+      <p>Prior to joining UNC Charlotte, I taught Computer Science courses at various institutions, covering undergraduate and graduate levels. I also worked in industry as a senior Java developer for over three years, contributing to the development and maintenance of various web-based applications.</p>
       
       <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina (Kosovo), an M.S. degree in Computer Science from Midwestern State University, M.S. degree in Computer Science and Engineering from the University of Notre Dame, and a Ph.D in Computer Science and Engineering from the University of North Texas.</p>
    
