--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
 		
       <p>I am an Assistant Professor in the <a href="https://cci.charlotte.edu/departments/department-of-software-information-systems/" target="_blank">Department of Software and Information Systems</a> at the University of North Carolina at Charlotte. In my research, I primarily focus on quality-related bug detection problems. Alongside this focus, I develop tools and techniques to enhance and contextualize the understanding of complex software quality issues related to secuirty, usability, reliability among others that arise from long-term maintenance efforts, while promoting effective emprical methodologies to enhance software quality. You can learn more about my research by reading my <a target="_blank" href="https://digital.library.unt.edu/ark:/67531/metadc2332577/m2/1/high_res_d/KRASNIQI-DISSERTATION-2024.pdf">dissertation</a>. 
 
-      
-		
-      <p>Prior to joining UNC Charlotte, I taught Computer Science courses at various institutions, covering undergraduate and graduate levels. I also worked in industry as a senior Java developer for over three years, contributing to the development and maintenance of various web-based applications.</p>
+
+      <p>Prior to joining UNC Charlotte, I taught Computer Science courses at various institutions, covering both undergraduate and graduate levels. I also worked in industry as a senior Java developer for over three years, contributing to the development and maintenance of various web-based applications.</p>
       
       <p>I hold a B.S. degree in Mathematics and Computer Science from the University of Prishtina (Kosovo), an M.S. degree in Computer Science from Midwestern State University, M.S. degree in Computer Science and Engineering from the University of Notre Dame, and a Ph.D in Computer Science and Engineering from the University of North Texas.</p>
    
