--- a/service/service.html
+++ b/service/service.html
@@ -69,6 +69,7 @@
       <strong><font color="92150F">Invited Organizing Committee</font></strong><br><br>
 		
       <ul>
+        <li><em>Tool and Demo Track Chair</em>, International Conference on Software Analysis, Evolution and Reengineering (SANER'25)</li>
         <li><em>Session Chair</em>, International Conference on Software Engineering for Artificial Intelligence (CAIN'23)</li>
         <li><em>Virtualization Chair</em>, International Conference on Automated Software Test (AST'22)</li>
       </ul>
