--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
         <p class="blocktext">Assistant Professor</p>
         <p class="blocktext"><strong>E-mail</strong>: rrezarta.krasniqi@uncc.edu<br>
-        <strong>Office</strong>: Woodward</p>
+        <strong>Office</strong>: Woodward, 333G</p>
      
       <p class="blocktext">
         <a title="GoogleScholar Account" target="_blank" href="https://scholar.google.com/citations?hl=en&user=r_Wi0GYAAAAJ&view_op=list_works&sortby=pubdate">
