--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <p class="blocktext"><a href="index.html" title="Rrezarta Krasniqi">
 			<img src="images/RrezartaHeadShot_200x200_new.png" alt="Rrezarta Krasniqi" style="width: 180px; height: 200px;"/></a></p>
-        <p class="blocktext">Assistant Professor</p>
+        <p class="blocktext">Assistant Professo of Software Engineering</p>
         <p class="blocktext"><strong>E-mail</strong>: rrezarta.krasniqi@uncc.edu<br>
         <strong>Office</strong>: Woodward, 333G</p>
      
